Implement ajax using fetch api
1. 리로드를 통해서 컨텐츠를 바꾸는 방식(서버사이트랜더링)에서 SPA(single page application) 방식으로 변경을 위해 채 content폴더와 그 안의 item들 추가
2.  content.js에서 fetch api를 통한 ajax 구현

--- a/app.html
+++ b/app.html
@@ -8,23 +8,21 @@
         <link rel="stylesheet" href="./app.css" />
     </head>
     <body>
-        <h1><a href="./app.html">WEB</a></h1>
+        <h1><a href="#!web">WEB</a></h1>
         <p>
             <button id="colorBtn">night</button>
         </p>
-        <ol>
-            <li><a href="./html.html">HTML</a></li>
-            <li><a href="./css.html">CSS</a></li>
-            <li><a href="./js.html">JavaScript</a></li>
-        </ol>
-        <h2>WEB is</h2>
-        <p>
-            The World Wide Web (WWW), commonly known as the Web, is an information system where documents and other web resources
-            are identified by Uniform Resource Locators (URLs, such as https://www.example.com/), which may be interlinked by
-            hypertext, and are accessible over the Internet. The resources of the WWW are transfered via the Hypertext Transfer
-            Protocol (HTTP) and may be accessed by users by a software application called a web browser and are published by a
-            software application called a web server.
+        <ul></ul>
+        <h2 id="title">WEB</h2>
+        <p id="article">
+            The World Wide Web (WWW), commonly known as the Web, is an information system where
+            documents and other web resources are identified by Uniform Resource Locators (URLs,
+            such as https://www.example.com/), which may be interlinked by hypertext, and are
+            accessible over the Internet. The resources of the WWW are transfered via the Hypertext
+            Transfer Protocol (HTTP) and may be accessed by users by a software application called a
+            web browser and are published by a software application called a web server.
         </p>
     </body>
     <script src="color.js"></script>
+    <script src="content.js"></script>
 </html>
