--- a/js.html
+++ b/js.html
@@ -19,9 +19,10 @@
         </ol>
         <h2>JavaScript is</h2>
         <p>
-            JavaScript (/ˈdʒɑːvəˌskrɪpt/), often abbreviated as JS, is a high-level, just-in-time compiled, multi-paradigm
-            programming language that conforms to the ECMAScript specification. JavaScript has curly-bracket syntax, dynamic
-            typing, prototype-based object-orientation, and first-class functions.
+            JavaScript ,often abbreviated as JS, is a high-level, just-in-time compiled,
+            multi-paradigm programming language that conforms to the ECMAScript specification.
+            JavaScript has curly-bracket syntax, dynamic typing, prototype-based object-orientation,
+            and first-class functions.
         </p>
     </body>
     <script src="color.js"></script>
